Add feeding time tracking, event persistence, and login functionality. Enhance UI for enclosure and reports management. Update database access logic for fallback configurations. Add README.

--- a/ZooManager/ZooManager.csproj
+++ b/ZooManager/ZooManager.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <PackageReference Include="MySql.Data" Version="9.5.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
     </ItemGroup>
 
 </Project>
