--- a/ZooManager/App.config
+++ b/ZooManager/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <connectionStrings>
         <add name="ZooManagerDB" 
-             connectionString="Server=localhost;Database=ZooManagerDB;Uid=root;Pwd=charlix37;" 
+             connectionString="Server=localhost;Database=ZooManagerDB;Uid=root;Pwd=password;" 
              providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 </configuration>
