--- a/ZooManager/ZooManager.csproj
+++ b/ZooManager/ZooManager.csproj
@@ -17,7 +17,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FlaUI.Core" Version="5.0.0" />
+      <PackageReference Include="FlaUI.UIA3" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.2" />
       <PackageReference Include="MySql.Data" Version="9.5.0" />
+      <PackageReference Include="NUnit" Version="4.4.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
     </ItemGroup>
 
