--- a/ZooManager/ZooManager.csproj
+++ b/ZooManager/ZooManager.csproj
@@ -21,4 +21,9 @@
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="UI\Assets\Logo.ico" />
+      <Resource Include="UI\Assets\Logo.ico" />
+    </ItemGroup>
+
 </Project>
